--- a/index.html
+++ b/index.html
@@ -3,229 +3,283 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Quiz App</title>
+  <title>Quiz App - Phân quyền & Điểm cao</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f4f4f4;
-      margin: 0;
-      padding: 20px;
+      background: #f4f6f8;
+      color: #333;
+      text-align: center;
+      padding: 30px;
     }
     .container {
-      max-width: 700px;
+      max-width: 600px;
       margin: auto;
-      background: white;
-      padding: 20px;
+      background: #fff;
+      padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    h1, h2 {
-      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
     input, button, textarea {
       font-family: Arial, sans-serif;
+      padding: 10px;
+      margin: 5px;
+      width: 90%;
     }
     button {
       background: #007bff;
       color: white;
       border: none;
-      padding: 10px 15px;
       border-radius: 5px;
       cursor: pointer;
-      margin: 5px 0;
     }
     button:hover {
       background: #0056b3;
     }
-    .hidden {
-      display: none;
-    }
     .question {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
+      text-align: left;
     }
     .result {
-      font-weight: bold;
-      text-align: center;
       margin-top: 20px;
+      font-weight: bold;
       color: green;
+    }
+    .answer {
+      color: red;
+      font-size: 14px;
+    }
+    .admin-section {
+      background: #eef5ff;
+      padding: 10px;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+    #logoutBtn {
+      margin-top: 15px;
+      background: #dc3545;
+    }
+    #logoutBtn:hover {
+      background: #b02a37;
+    }
+    .score-board {
+      color: #444;
+      margin-bottom: 15px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Hệ thống trắc nghiệm</h1>
+  <!-- Trang đăng nhập -->
+  <div class="container" id="loginPage">
+    <h2>Đăng nhập / Đăng ký</h2>
+    <input type="text" id="username" placeholder="Tên đăng nhập" /><br />
+    <input type="password" id="password" placeholder="Mật khẩu" /><br />
+    <button onclick="register()">Đăng ký</button>
+    <button onclick="login()">Đăng nhập</button>
+    <p id="loginMessage"></p>
+  </div>
 
-    <!-- Màn hình đăng nhập -->
-    <div id="loginScreen">
-      <h2>Đăng nhập</h2>
-      <input type="text" id="username" placeholder="Tên đăng nhập" /><br />
-      <input type="password" id="password" placeholder="Mật khẩu" /><br />
-      <button onclick="login()">Đăng nhập</button>
-      <p><small>Tài khoản admin: <b>admin / 1234</b></small></p>
-      <p><small>Tài khoản khách: <b>guest / 1234</b></small></p>
+  <!-- Trang người dùng -->
+  <div class="container" id="quizPage" style="display:none;">
+    <h2>Bài trắc nghiệm</h2>
+    <p class="score-board" id="highScoreText"></p>
+    <div id="quiz"></div>
+    <button onclick="submitQuiz()">Nộp bài</button>
+    <div class="result" id="result"></div>
+    <button id="logoutBtn" onclick="logout()">Đăng xuất</button>
+  </div>
+
+  <!-- Trang admin -->
+  <div class="container" id="adminPage" style="display:none;">
+    <h2>Quản lý câu hỏi (Admin)</h2>
+    <div id="questionList"></div>
+    <div class="admin-section">
+      <h3>Thêm / Cập nhật câu hỏi</h3>
+      <input type="text" id="newQuestion" placeholder="Nhập nội dung câu hỏi" /><br>
+      <textarea id="newOptions" placeholder="Nhập 4 lựa chọn, cách nhau bằng dấu phẩy"></textarea><br>
+      <input type="number" id="correctIndex" placeholder="Vị trí đáp án đúng (0-3)" min="0" max="3"/><br>
+      <button onclick="addOrUpdateQuestion()">Thêm / Cập nhật</button>
     </div>
-
-    <!-- Màn hình câu hỏi -->
-    <div id="quizScreen" class="hidden">
-      <h2>Bài trắc nghiệm</h2>
-      <div id="questionList"></div>
-      <button id="submitBtn" onclick="submitQuiz()">Nộp bài</button>
-      <div class="result" id="result"></div>
-    </div>
-
-    <!-- Màn hình chỉnh sửa câu hỏi (Admin) -->
-    <div id="adminPanel" class="hidden">
-      <h2>Quản lý câu hỏi</h2>
-      <div id="adminQuestions"></div>
-      <h3>Thêm câu hỏi mới</h3>
-      <textarea id="newQuestionText" placeholder="Nhập câu hỏi..."></textarea><br />
-      <input id="newOptionA" placeholder="Đáp án A" /><br />
-      <input id="newOptionB" placeholder="Đáp án B" /><br />
-      <input id="newOptionC" placeholder="Đáp án C" /><br />
-      <input id="newOptionD" placeholder="Đáp án D" /><br />
-      <input id="newCorrect" placeholder="Đáp án đúng (A/B/C/D)" /><br />
-      <button onclick="addQuestion()">Thêm câu hỏi</button>
-    </div>
-
+    <button id="logoutBtn" onclick="logout()">Đăng xuất</button>
   </div>
 
   <script>
-    // Dữ liệu câu hỏi mẫu
-    let questions = JSON.parse(localStorage.getItem("questions")) || [
-      { text: "Thủ đô của Việt Nam là?", options: ["Hà Nội", "TP.HCM", "Đà Nẵng", "Huế"], answer: "A" },
-      { text: "1 + 1 = ?", options: ["1", "2", "3", "4"], answer: "B" }
-    ];
+    // --- Quản lý tài khoản ---
+    const adminUsername = "admin";
+    const adminPassword = "123456";
 
     let currentUser = null;
-    let submitted = false;
+
+    function register() {
+      const user = username.value.trim();
+      const pass = password.value.trim();
+      if (!user || !pass) return alert("Vui lòng nhập đầy đủ thông tin!");
+      if (user === adminUsername) return alert("Không thể tạo tài khoản trùng với admin!");
+      if (localStorage.getItem(user)) return alert("Tài khoản đã tồn tại!");
+      localStorage.setItem(user, JSON.stringify({ password: pass, highScore: 0 }));
+      alert("Đăng ký thành công!");
+    }
 
     function login() {
-      const user = document.getElementById("username").value.trim();
-      const pass = document.getElementById("password").value.trim();
-
-      if (user === "admin" && pass === "1234") {
-        currentUser = "admin";
-        showAdminPanel();
-      } else if (user === "guest" && pass === "1234") {
-        currentUser = "guest";
-        showQuiz();
+      const user = username.value.trim();
+      const pass = password.value.trim();
+      const savedData = localStorage.getItem(user);
+      if (user === adminUsername && pass === adminPassword) {
+        currentUser = adminUsername;
+        loginPage.style.display = "none";
+        adminPage.style.display = "block";
+        loadQuestionList();
+      } else if (savedData) {
+        const data = JSON.parse(savedData);
+        if (data.password === pass) {
+          currentUser = user;
+          loginPage.style.display = "none";
+          quizPage.style.display = "block";
+          loadQuiz();
+          showHighScore();
+        } else {
+          loginMessage.innerText = "Sai mật khẩu!";
+        }
       } else {
-        alert("Sai tài khoản hoặc mật khẩu!");
+        loginMessage.innerText = "Tài khoản không tồn tại!";
       }
     }
 
-    // Hiển thị cho khách
-    function showQuiz() {
-      document.getElementById("loginScreen").classList.add("hidden");
-      document.getElementById("quizScreen").classList.remove("hidden");
+    function logout() {
+      currentUser = null;
+      quizPage.style.display = "none";
+      adminPage.style.display = "none";
+      loginPage.style.display = "block";
+      username.value = "";
+      password.value = "";
+      result.innerHTML = "";
+    }
 
-      const container = document.getElementById("questionList");
-      container.innerHTML = "";
+    // --- Dữ liệu câu hỏi ---
+    let questions = JSON.parse(localStorage.getItem("questions")) || [
+      {
+        q: "1. Thủ đô của Việt Nam là gì?",
+        options: ["Hà Nội", "TP. Hồ Chí Minh", "Đà Nẵng", "Huế"],
+        correct: 0
+      },
+      {
+        q: "2. 2 + 2 bằng mấy?",
+        options: ["3", "4", "5", "6"],
+        correct: 1
+      }
+    ];
+
+    function saveQuestions() {
+      localStorage.setItem("questions", JSON.stringify(questions));
+    }
+
+    // --- Trang Quiz (người dùng) ---
+    function loadQuiz() {
+      quiz.innerHTML = "";
       questions.forEach((q, i) => {
         const div = document.createElement("div");
         div.classList.add("question");
         div.innerHTML = `
-          <p><b>Câu ${i + 1}:</b> ${q.text}</p>
-          ${["A","B","C","D"].map((opt, idx) => `
-            <label>
-              <input type="radio" name="q${i}" value="${opt}"> ${opt}. ${q.options[idx]}
-            </label><br>
+          <p><b>${q.q}</b></p>
+          ${q.options.map((opt, j) => `
+            <label><input type="radio" name="q${i}" value="${j}"> ${opt}</label><br>
           `).join("")}
         `;
-        container.appendChild(div);
+        quiz.appendChild(div);
       });
     }
 
-    // Chấm điểm và hiển thị kết quả
     function submitQuiz() {
-      if (submitted) {
-        alert("Bạn đã nộp bài rồi!");
-        return;
-      }
-
       let correct = 0;
+      let details = "";
       questions.forEach((q, i) => {
-        const answer = document.querySelector(`input[name="q${i}"]:checked`);
-        if (answer && answer.value === q.answer) correct++;
+        const selected = document.querySelector(`input[name="q${i}"]:checked`);
+        if (selected) {
+          const ans = parseInt(selected.value);
+          if (ans === q.correct) {
+            correct++;
+          } else {
+            details += `<p class='answer'>Sai câu ${i+1}. Đáp án đúng: ${q.options[q.correct]}</p>`;
+          }
+        } else {
+          details += `<p class='answer'>Chưa chọn câu ${i+1}. Đáp án đúng: ${q.options[q.correct]}</p>`;
+        }
       });
 
-      document.getElementById("result").innerText = `Bạn trả lời đúng ${correct}/${questions.length} câu.`;
-      submitted = true;
-      document.getElementById("submitBtn").disabled = true;
+      result.innerHTML = `<p>Kết quả: ${correct}/${questions.length} câu đúng</p>${details}`;
+      updateHighScore(correct);
     }
 
-    // Hiển thị cho admin
-    function showAdminPanel() {
-      document.getElementById("loginScreen").classList.add("hidden");
-      document.getElementById("adminPanel").classList.remove("hidden");
-      loadAdminQuestions();
+    // --- Lưu điểm cao nhất ---
+    function updateHighScore(score) {
+      const data = JSON.parse(localStorage.getItem(currentUser));
+      if (score > (data.highScore || 0)) {
+        data.highScore = score;
+        localStorage.setItem(currentUser, JSON.stringify(data));
+        showHighScore();
+        alert("🎉 Bạn vừa đạt kỷ lục mới!");
+      }
     }
 
-    function loadAdminQuestions() {
-      const container = document.getElementById("adminQuestions");
-      container.innerHTML = "";
-      questions.forEach((q, i) => {
-        const div = document.createElement("div");
-        div.classList.add("question");
-        div.innerHTML = `
-          <textarea onchange="updateQuestion(${i}, this.value)">${q.text}</textarea><br>
-          ${["A","B","C","D"].map((opt, idx) => `
-            <input value="${q.options[idx]}" onchange="updateOption(${i}, ${idx}, this.value)" /> (${opt})
-          `).join("<br>")}<br>
-          Đáp án đúng: <input value="${q.answer}" onchange="updateAnswer(${i}, this.value.toUpperCase())" /><br>
+    function showHighScore() {
+      const data = JSON.parse(localStorage.getItem(currentUser));
+      highScoreText.innerText = `🏆 Điểm cao nhất: ${data.highScore}/${questions.length}`;
+    }
+
+    // --- Trang Admin ---
+    let editingIndex = -1;
+
+    function loadQuestionList() {
+      questionList.innerHTML = questions.map((q, i) => `
+        <div class="question">
+          <b>${q.q}</b><br>
+          <small>${q.options.join(" | ")}</small><br>
+          <small>Đáp án đúng: ${q.correct}</small><br>
+          <button onclick="editQuestion(${i})">Sửa</button>
           <button onclick="deleteQuestion(${i})">Xóa</button>
-          <hr>
-        `;
-        container.appendChild(div);
-      });
+        </div>
+        <hr>
+      `).join("");
     }
 
-    function updateQuestion(i, val) {
-      questions[i].text = val;
-      saveQuestions();
-    }
-
-    function updateOption(i, optIndex, val) {
-      questions[i].options[optIndex] = val;
-      saveQuestions();
-    }
-
-    function updateAnswer(i, val) {
-      questions[i].answer = val;
-      saveQuestions();
-    }
-
-    function addQuestion() {
-      const text = document.getElementById("newQuestionText").value;
-      const opts = [
-        document.getElementById("newOptionA").value,
-        document.getElementById("newOptionB").value,
-        document.getElementById("newOptionC").value,
-        document.getElementById("newOptionD").value
-      ];
-      const ans = document.getElementById("newCorrect").value.toUpperCase();
-
-      if (!text || !opts.every(o => o) || !"ABCD".includes(ans)) {
-        alert("Vui lòng nhập đầy đủ thông tin và đáp án hợp lệ!");
+    function addOrUpdateQuestion() {
+      const text = newQuestion.value.trim();
+      const opts = newOptions.value.split(",").map(o => o.trim());
+      const correct = parseInt(correctIndex.value);
+      if (!text || opts.length !== 4 || isNaN(correct)) {
+        alert("Vui lòng nhập đầy đủ và chính xác!");
         return;
       }
 
-      questions.push({ text, options: opts, answer: ans });
+      if (editingIndex >= 0) {
+        questions[editingIndex] = { q: text, options: opts, correct };
+        editingIndex = -1;
+      } else {
+        questions.push({ q: text, options: opts, correct });
+      }
+
       saveQuestions();
-      loadAdminQuestions();
-      alert("Đã thêm câu hỏi mới!");
+      loadQuestionList();
+      newQuestion.value = "";
+      newOptions.value = "";
+      correctIndex.value = "";
+      alert("Đã lưu câu hỏi!");
+    }
+
+    function editQuestion(i) {
+      const q = questions[i];
+      newQuestion.value = q.q;
+      newOptions.value = q.options.join(", ");
+      correctIndex.value = q.correct;
+      editingIndex = i;
     }
 
     function deleteQuestion(i) {
       if (confirm("Xóa câu hỏi này?")) {
         questions.splice(i, 1);
         saveQuestions();
-        loadAdminQuestions();
+        loadQuestionList();
       }
-    }
-
-    function saveQuestions() {
-      localStorage.setItem("questions", JSON.stringify(questions));
     }
   </script>
 </body>
